Fix: Change heart visibility to hidden on hit
This was done so that the score layout would not be ruined after losing 
a heart.

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
 }
 
 .lose {
-    display: none;
+    visibility: hidden;
 }
 
 .score-text {
